[gd_scene load_steps=4 format=3 uid="uid://6iigglaq8stq"]

[ext_resource type="Script" uid="uid://x3q7w62rlk68" path="res://scripts/cards/card_ui.gd" id="1_d81rb"]
[ext_resource type="Texture2D" uid="uid://dg8fxts8qnpco" path="res://assets/images/cardbacks4092021.png" id="2_6u4wf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ktuci"]
atlas = ExtResource("2_6u4wf")
region = Rect2(444, 138, 99, 128)

[node name="CardRoot" type="Control"]
custom_minimum_size = Vector2(120, 150)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1480.0
offset_bottom = -750.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d81rb")

[node name="CardBG" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ktuci")

[node name="Art" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.0954545
anchor_right = 0.926667
anchor_bottom = 0.577273
offset_right = -2.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="PowerLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="EffectLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="HighlightOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.203922)
metadata/_edit_use_anchors_ = true
